    protected by EV_TOP or something else.
 -- Attempt to make modules work on OS X (Darwin).
 -- CLogFile::AppendLog() does not actually position log at end of
    existing log file. Net result is only that first two lines
    (Containing to INI/LOAD entries) are lost.
 -- ConvertToUTF8() converted code points above 0x10000 incorrectly.
 -- Allow %=<name> to support single-letter attribute names and
    document. Issue 341.


Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~
 -- Help entries use less memory (specific improvements described in
    Issue 238 comments).  Thanks Alierak.
 -- MUNGE() translates results through a hash table instead of
    repeated linear searching (Issue 247).  Thanks Alierak and Ian.
 -- VMAG(), VUNIT, and SHUFFLE() only need LBUF_SIZE/2 elements
    instead of LBUF_SIZE elements.
 -- Prepending a single char to a mux_string no longer copies the
    string twice (Issue 281).
 -- Make mux_exec() not check function names that are too long to be
    valid.
 -- Prepending a single char to a mux_string no longer copies the
    string twice (Issue 281).
 -- Make parse_arglist_lite() and mux_exec() non-destructive.
 -- Make mux_exec() take a char *pdstr instead of char **dstr.
 -- Various things made const and/or consolidated.
 -- Merge fun_wrap and linewrap_general.


Cosmetic Changes:
~~~~~~~~~~~~~~~~
 -- Added Doxygen file headers (Issue 102).


Miscellaneous:
~~~~~~~~~~~~~
 -- Documented Lbufref and Regref pools in 'wizhelp @list alloc'.
    Thanks Alierak.
 -- Documented use of a single backslash as a proper shortcut to
    @emit (Issue 219).  Thanks Alierak.
 -- Removed unnecessary global pos variable from help.cpp (Issue 265).
 -- Fixed dangling reference to 'help @version' (Issue 277).
 -- Corrected documentation of E() and PI() to reflect actual
    precision (Issue 283).  Thanks Jake.
 -- Document @restart dropping SSL connections up front.
 -- Document report and move into walkdb.cpp (Issue 293).